syntax = "proto3";

package auth_service;

option go_package = "github.com/vwency/microservices_golang/proto/auth_service";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  bool valid = 1;
  string user_id = 2;
  repeated string roles = 3;
  int64 expires_at = 4;
}

message LogoutRequest {
  string username = 1;
  string access_token = 2;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message GenerateTokensRequest {
  string user_id = 1;
  repeated string roles = 2;
}

message GenerateTokensResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GenerateTokens(GenerateTokensRequest) returns (GenerateTokensResponse);

  rpc Register(RegisterRequest) returns (RegisterResponse);
}
